--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="burmese-website-ai.github.io/smartburme/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Smart Burme </title>
 </head>
 <body>
@@ -15,6 +15,6 @@
             <button type="submit">မှတ်ပုံတင်မည်</button>
         </form>
     </div>
-    <script src="burmese-website-ai.github.io/smartburme/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
