--- a/home.html
+++ b/home.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
+    <title>Smart Burme - Home</title>
+</head>
+<body>
+    <div class="menu">
+        <a href="registration.html">Register</a>
+        <a href="login.html">Login</a>
+        <a href="forgot_password.html">Forgot Password</a>
+        <a href="about.html">About</a>
+    </div>
+    <script src="scripts/scripts.js"></script>
+</body>
+</html>
