--- a/login.html
+++ b/login.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
+    <title>Smart Burme - Login</title>
+</head>
+<body>
+    <h1>Login</h1>
+    <form onsubmit="redirectToChat(event)">
+        <input type="email" placeholder="Email" required>
+        <input type="password" placeholder="Password" required>
+        <button type="submit">Login</button>
+    </form>
+    <script src="scripts/scripts.js"></script>
+</body>
+</html>
