--- a/forgot_password.html
+++ b/forgot_password.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
+    <title>Smart Burme - Forgot Password</title>
+</head>
+<body>
+    <h1>Forgot Password</h1>
+    <form id="forgotPasswordForm" onsubmit="handleForgotPassword(event)">
+        <input type="email" placeholder="Enter your email" required>
+        <button type="submit">Reset Password</button>
+    </form>
+    <p id="message"></p>
+    <script src="scripts/scripts.js"></script>
+</body>
+</html>
