--- a/home.html
+++ b/home.html
@@ -1,18 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css">
-    <title>Smart Burme - Home</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
+    <title>Smart Burme - Home</title>
+    <style>
+        /* Hack Style */
+        body {
+            background-color: #000;
+            color: #00FF00;
+            font-family: 'Courier New', monospace;
+        }
+        .menu {
+            background-color: #111;
+            text-align: center;
+            padding: 10px 0;
+        }
+        .menu a {
+            color: #00FF00;
+            padding: 14px 20px;
+            text-decoration: none;
+            display: inline-block;
+        }
+        .menu a:hover {
+            color: #FF0000;
+        }
+        .home-content {
+            margin-top: 50px;
+            text-align: center;
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
-    <div class="menu">
-        <a href="registration.html">Register</a>
-        <a href="login.html">Login</a>
-        <a href="forgot_password.html">Forgot Password</a>
-        <a href="about.html">About</a>
-    </div>
-    <script src="scripts/scripts.js"></script>
+    <!-- Navigation Menu -->
+    <div class="menu">
+        <a href="registration.html" class="menu-item">Register</a>
+        <a href="login.html" class="menu-item">Login</a>
+        <a href="forgot_password.html" class="menu-item">Forgot Password</a>
+        <a href="about.html" class="menu-item">About</a>
+    </div>
+
+    <!-- Main Content -->
+    <div class="home-content">
+        <h1>Welcome to Smart Burme!</h1>
+        <p>Your gateway to a smarter experience.</p>
+    </div>
+
+    <script src="scripts/scripts.js"></script>
 </body>
 </html>
