--- a/googleaf156923183ef178.html
+++ b/googleaf156923183ef178.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <body><meta name="google-site-verification" content="XM7NWICcpUJEo_pUyVWDHC3mEVHdtQwuwwBiEICXR7c" /></body>
+    <meta name="google-site-verification" content="XM7NWICcpUJEo_pUyVWDHC3mEVHdtQwuwwBiEICXR7c" />
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,5 +25,14 @@
     <!-- JavaScript for Snowflakes Animation -->
     <script src="scripts/snowflakes.js"></script> <!-- Link to your JS -->
     <script src="scripts/scripts.js"></script> <!-- Your custom scripts -->
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-XXXXXXXXXX');
+</script>
+    
 </body>
 </html>
