--- a/index.html
+++ b/index.html
@@ -1,56 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Burme - Welcome</title>
-    <link rel="stylesheet" href="styles/styles.css">
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background: radial-gradient(circle, #000000, #0f0f0f);
-            color: #00ff88;
-            font-family: 'Arial', sans-serif;
-            overflow: hidden;
-            margin: 0;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Smart Burme | Loading</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
 
-        h1 {
-            font-size: 3em;
-            letter-spacing: 3px;
-            text-shadow: 0 0 5px #00ff88,
-                        0 0 10px #00ff88,
-                        0 0 20px #00ff88,
-                        0 0 40px #00ff88;
-            animation: glow 2s ease-in-out infinite alternate;
-        }
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #0a0a0a;
+      overflow: hidden;
+      min-height: 100vh;
+    }
 
-        @keyframes glow {
-            from {
-                text-shadow: 0 0 5px #00ff88,
-                            0 0 10px #00ff88,
-                            0 0 20px #00ff88,
-                            0 0 40px #00ff88;
-            }
-            to {
-                text-shadow: 0 0 10px #00ff88,
-                            0 0 20px #00ff88,
-                            0 0 30px #00ff88,
-                            0 0 60px #00ff88;
-            }
-        }
-    </style>
+    .container {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .title {
+      color: #0ef;
+      font-size: 3em;
+      text-shadow: 0 0 15px #0ef, 0 0 30px #0ef;
+      z-index: 10;
+      position: absolute;
+      text-align: center;
+    }
+
+    .container span {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      width: 32px;
+      height: 6px;
+      background: #2c4766;
+      border-radius: 8px;
+      transform-origin: left center;
+      transform: translate(-50%, -50%) rotate(calc(var(--i) * (360deg / 50))) translateX(128px);
+      animation: animateBlink 3s linear infinite;
+      animation-delay: calc(var(--i) * (0.06s));
+    }
+
+    @keyframes animateBlink {
+      0%, 100% {
+        background: #0ef;
+        box-shadow: 0 0 10px #0ef, 0 0 20px #0ef;
+      }
+      25% {
+        background: #2c4766;
+        box-shadow: none;
+      }
+    }
+  </style>
 </head>
 <body>
-    <h1>Smart Burme</h1>
-    <script>
-        // Redirect to home.html after 3 seconds
-        setTimeout(function () {
-            window.location.href = 'home.html';
-        }, 3000);
-    </script>
+  <div class="container">
+    <div class="title">SMART BURME</div>
+  </div>
+
+  <script>
+    // span animation generate
+    for (let i = 0; i < 50; i++) {
+      const span = document.createElement('span');
+      span.style.setProperty('--i', i);
+      document.querySelector('.container').appendChild(span);
+    }
+
+    // auto redirect after 7 seconds
+    setTimeout(() => {
+      window.location.href = 'registration.html';
+    }, 7000);
+  </script>
 </body>
 </html>
