--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Smart Burme | Loading</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -14,28 +14,31 @@
     }
 
     body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
       background: #0a0a0a;
       overflow: hidden;
       min-height: 100vh;
+      position: relative;
     }
 
     .container {
       position: relative;
+      width: 100%;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
     }
 
     .title {
-      color: #0ef;
-      font-size: 3em;
-      text-shadow: 0 0 15px #0ef, 0 0 30px #0ef;
-      z-index: 10;
       position: absolute;
-      text-align: center;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #0ef;
+      font-size: 2em;
+      text-shadow: 0 0 10px #0ef, 0 0 20px #0ef;
+      z-index: 10;
+      white-space: nowrap;
     }
 
     .container span {
@@ -49,7 +52,7 @@
       transform-origin: left center;
       transform: translate(-50%, -50%) rotate(calc(var(--i) * (360deg / 50))) translateX(128px);
       animation: animateBlink 3s linear infinite;
-      animation-delay: calc(var(--i) * (0.06s));
+      animation-delay: calc(var(--i) * 0.06s);
     }
 
     @keyframes animateBlink {
