--- a/registration.html
+++ b/registration.html
@@ -1,18 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css">
-    <title>Smart Burme - Registration</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Smart Burme | Registration</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    body {
+      background: #0a0a0a;
+      overflow: hidden;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+    }
+
+    .container {
+      position: relative;
+      width: 100%;
+      max-width: 400px;
+      padding: 40px;
+      background: rgba(31, 41, 58, 0.85);
+      border-radius: 20px;
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4);
+      backdrop-filter: blur(5px);
+      z-index: 10;
+    }
+
+    .container h2 {
+      color: #0ef;
+      font-size: 1.8em;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .input-box {
+      position: relative;
+      margin: 20px 0;
+    }
+
+    .input-box input {
+      width: 100%;
+      height: 45px;
+      background: transparent;
+      border: 2px solid #2c4766;
+      border-radius: 40px;
+      padding: 0 20px;
+      color: #fff;
+      font-size: 1em;
+      outline: none;
+      transition: 0.4s;
+    }
+
+    .input-box input:focus,
+    .input-box input:valid {
+      border-color: #0ef;
+      box-shadow: 0 0 10px #0ef;
+    }
+
+    .input-box label {
+      position: absolute;
+      top: 50%;
+      left: 20px;
+      transform: translateY(-50%);
+      color: #ccc;
+      font-size: 0.9em;
+      pointer-events: none;
+      transition: 0.4s;
+    }
+
+    .input-box input:focus ~ label,
+    .input-box input:valid ~ label {
+      top: 5px;
+      font-size: 0.75em;
+      background: #0a0a0a;
+      padding: 0 6px;
+      color: #0ef;
+    }
+
+    .btn {
+      width: 100%;
+      height: 45px;
+      background: #0ef;
+      border: none;
+      border-radius: 40px;
+      font-weight: bold;
+      color: #0a0a0a;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .btn:hover {
+      background: #09c;
+      box-shadow: 0 0 15px #0ef;
+    }
+
+    .bg-animation span {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      width: 32px;
+      height: 6px;
+      background: #2c4766;
+      border-radius: 8px;
+      transform-origin: left center;
+      transform: translate(-50%, -50%) rotate(calc(var(--i) * 7.2deg)) translateX(128px);
+      animation: animateBlink 3s linear infinite;
+      animation-delay: calc(var(--i) * 0.06s);
+    }
+
+    @keyframes animateBlink {
+      0%, 100% {
+        background: #0ef;
+        box-shadow: 0 0 10px #0ef, 0 0 20px #0ef;
+      }
+      25% {
+        background: #2c4766;
+        box-shadow: none;
+      }
+    }
+  </style>
 </head>
 <body>
-    <h1>Register</h1>
-    <form>
-        <input type="text" placeholder="Username" required>
-        <input type="email" placeholder="Email" required>
-        <input type="password" placeholder="Password" required>
-        <button type="submit">Register</button>
+  <div class="container">
+    <h2>Register to Smart Burme</h2>
+    <form action="#">
+      <div class="input-box">
+        <input type="text" required />
+        <label>Username</label>
+      </div>
+      <div class="input-box">
+        <input type="email" required />
+        <label>Email</label>
+      </div>
+      <div class="input-box">
+        <input type="password" required />
+        <label>Password</label>
+      </div>
+      <button type="submit" class="btn">Register</button>
     </form>
+  </div>
+
+  <div class="bg-animation"></div>
+
+  <script>
+    for (let i = 0; i < 50; i++) {
+      const span = document.createElement('span');
+      span.style.setProperty('--i', i);
+      document.querySelector('.bg-animation').appendChild(span);
+    }
+  </script>
 </body>
 </html>
