--- a/login.html
+++ b/login.html
@@ -1,235 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Login Form | Smart Burmese AI</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background: #1f293a;
-            overflow: hidden;
-        }
-        .container {
-            position: relative;
-            width: 100%;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        /* Fixed Animation */
-        .container span {
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            width: 32px;
-            height: 6px;
-            background: #2c4766;
-            border-radius: 8px;
-            transform-origin: left center;
-            transform: translate(-50%, -50%) rotate(calc(var(--i) * (360deg / 50))) translateX(128px);
-            animation: animateBlink 3s linear infinite;
-            animation-delay: calc(var(--i) * (0.06s));
-        }
-        @keyframes animateBlink {
-            0%, 100% {
-                background: #0ef;
-                box-shadow: 0 0 10px #0ef, 0 0 20px #0ef;
-            }
-            25% {
-                background: #2c4766;
-                box-shadow: none;
-            }
-        }
-        .login-box {
-            position: relative;
-            width: 90%;
-            max-width: 400px;
-            background: rgba(31, 41, 58, 0.8);
-            border-radius: 20px;
-            padding: 40px;
-            box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
-            z-index: 10;
-            backdrop-filter: blur(5px);
-        }
-        .login-box h2 {
-            font-size: 2em;
-            color: #0ef;
-            text-align: center;
-            margin-bottom: 30px;
-        }
-        .input-box {
-            position: relative;
-            margin: 25px 0;
-        }
-        .input-box input {
-            width: 100%;
-            height: 50px;
-            background: transparent;
-            border: 2px solid #2c4766;
-            outline: none;
-            border-radius: 40px;
-            font-size: 1em;
-            color: #fff;
-            padding: 0 20px;
-            transition: all 0.5s ease;
-        }
-        .input-box input:focus,
-        .input-box input:valid {
-            border-color: #0ef;
-            box-shadow: 0 0 10px #0ef;
-        }
-        .input-box label {
-            position: absolute;
-            top: 50%;
-            left: 20px;
-            transform: translateY(-50%);
-            font-size: 1em;
-            color: #fff;
-            pointer-events: none;
-            transition: all 0.5s ease;
-        }
-        .input-box input:focus~label,
-        .input-box input:valid~label {
-            top: 1px;
-            font-size: .8em;
-            background: #1f293a;
-            padding: 0 6px;
-            color: #0ef;
-        }
-        .forgot-pass {
-            margin: -15px 0 15px;
-            text-align: center;
-        }
-        .forgot-pass a {
-            font-size: .85em;
-            color: #fff;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-        .forgot-pass a:hover {
-            color: #0ef;
-            text-decoration: underline;
-        }
-        .btn {
-            width: 100%;
-            height: 45px;
-            background: #0ef;
-            border: none;
-            outline: none;
-            border-radius: 40px;
-            cursor: pointer;
-            font-size: 1em;
-            color: #1f293a;
-            font-weight: 600;
-            transition: all 0.3s;
-        }
-        .btn:hover {
-            background: #09c;
-            box-shadow: 0 0 15px #0ef;
-        }
-        .signup-link {
-            margin: 20px 0 10px;
-            text-align: center;
-        }
-        .signup-link a {
-            font-size: 1em;
-            color: #0ef;
-            text-decoration: none;
-            font-weight: 600;
-            transition: all 0.3s;
-        }
-        .signup-link a:hover {
-            text-decoration: underline;
-            text-shadow: 0 0 5px #0ef;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Smart Burme | Login</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    body {
+      background: #0a0a0a;
+      overflow: hidden;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+    }
+
+    .container {
+      position: relative;
+      width: 100%;
+      max-width: 400px;
+      padding: 40px;
+      background: rgba(31, 41, 58, 0.85);
+      border-radius: 20px;
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4);
+      backdrop-filter: blur(5px);
+      z-index: 10;
+    }
+
+    .container h2 {
+      color: #0ef;
+      font-size: 1.8em;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .input-box {
+      position: relative;
+      margin: 20px 0;
+    }
+
+    .input-box input {
+      width: 100%;
+      height: 45px;
+      background: transparent;
+      border: 2px solid #2c4766;
+      border-radius: 40px;
+      padding: 0 20px;
+      color: #fff;
+      font-size: 1em;
+      outline: none;
+      transition: 0.4s;
+    }
+
+    .input-box input:focus,
+    .input-box input:valid {
+      border-color: #0ef;
+      box-shadow: 0 0 10px #0ef;
+    }
+
+    .input-box label {
+      position: absolute;
+      top: 50%;
+      left: 20px;
+      transform: translateY(-50%);
+      color: #ccc;
+      font-size: 0.9em;
+      pointer-events: none;
+      transition: 0.4s;
+    }
+
+    .input-box input:focus ~ label,
+    .input-box input:valid ~ label {
+      top: 5px;
+      font-size: 0.75em;
+      background: #0a0a0a;
+      padding: 0 6px;
+      color: #0ef;
+    }
+
+    .btn {
+      width: 100%;
+      height: 45px;
+      background: #0ef;
+      border: none;
+      border-radius: 40px;
+      font-weight: bold;
+      color: #0a0a0a;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .btn:hover {
+      background: #09c;
+      box-shadow: 0 0 15px #0ef;
+    }
+
+    .signup {
+      text-align: center;
+      margin-top: 15px;
+      color: #fff;
+      font-size: 0.9em;
+    }
+
+    .signup a {
+      color: #0ef;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    .signup a:hover {
+      text-decoration: underline;
+    }
+
+    .bg-animation span {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      width: 32px;
+      height: 6px;
+      background: #2c4766;
+      border-radius: 8px;
+      transform-origin: left center;
+      transform: translate(-50%, -50%) rotate(calc(var(--i) * 7.2deg)) translateX(128px);
+      animation: animateBlink 3s linear infinite;
+      animation-delay: calc(var(--i) * 0.06s);
+    }
+
+    @keyframes animateBlink {
+      0%, 100% {
+        background: #0ef;
+        box-shadow: 0 0 10px #0ef, 0 0 20px #0ef;
+      }
+      25% {
+        background: #2c4766;
+        box-shadow: none;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <div class="login-box">
-            <h2>Login</h2>
-            <form action="#">
-                <div class="input-box">
-                    <input type="email" required>
-                    <label>Email</label>
-                </div>
-                <div class="input-box">
-                    <input type="password" required>
-                    <label>Password</label>
-                </div>
-                <div class="forgot-pass">
-                    <a href="#">Forgot Password?</a>
-                </div>
-                <button type="submit" class="btn">Login</button>
-                <div class="signup-link">
-                    Don't have an account? <a href="#">Sign Up</a>
-                </div>
-            </form>
-        </div>
-        <!-- Background animation spans -->
-        <span style="--i:0"></span>
-        <span style="--i:1"></span>
-        <span style="--i:2"></span>
-        <span style="--i:3"></span>
-        <span style="--i:4"></span>
-        <span style="--i:5"></span>
-        <span style="--i:6"></span>
-        <span style="--i:7"></span>
-        <span style="--i:8"></span>
-        <span style="--i:9"></span>
-        <span style="--i:10"></span>
-        <span style="--i:11"></span>
-        <span style="--i:12"></span>
-        <span style="--i:13"></span>
-        <span style="--i:14"></span>
-        <span style="--i:15"></span>
-        <span style="--i:16"></span>
-        <span style="--i:17"></span>
-        <span style="--i:18"></span>
-        <span style="--i:19"></span>
-        <span style="--i:20"></span>
-        <span style="--i:21"></span>
-        <span style="--i:22"></span>
-        <span style="--i:23"></span>
-        <span style="--i:24"></span>
-        <span style="--i:25"></span>
-        <span style="--i:26"></span>
-        <span style="--i:27"></span>
-        <span style="--i:28"></span>
-        <span style="--i:29"></span>
-        <span style="--i:30"></span>
-        <span style="--i:31"></span>
-        <span style="--i:32"></span>
-        <span style="--i:33"></span>
-        <span style="--i:34"></span>
-        <span style="--i:35"></span>
-        <span style="--i:36"></span>
-        <span style="--i:37"></span>
-        <span style="--i:38"></span>
-        <span style="--i:39"></span>
-        <span style="--i:40"></span>
-        <span style="--i:41"></span>
-        <span style="--i:42"></span>
-        <span style="--i:43"></span>
-        <span style="--i:44"></span>
-        <span style="--i:45"></span>
-        <span style="--i:46"></span>
-        <span style="--i:47"></span>
-        <span style="--i:48"></span>
-        <span style="--i:49"></span>
+  <div class="container">
+    <h2>Login to Smart Burme</h2>
+    <form action="#">
+      <div class="input-box">
+        <input type="email" required />
+        <label>Email</label>
+      </div>
+      <div class="input-box">
+        <input type="password" required />
+        <label>Password</label>
+      </div>
+      <button type="submit" class="btn">Login</button>
+    </form>
+    <div class="signup">
+      Don't have an account? <a href="registration.html">Sign up</a>
     </div>
+  </div>
+
+  <div class="bg-animation"></div>
+
+  <script>
+    for (let i = 0; i < 50; i++) {
+      const span = document.createElement('span');
+      span.style.setProperty('--i', i);
+      document.querySelector('.bg-animation').appendChild(span);
+    }
+  </script>
 </body>
 </html>
