--- a/index.html
+++ b/index.html
@@ -1,89 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart Burme | Loading</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
-    }
-
-    body {
-      background: #0a0a0a;
-      overflow: hidden;
-      min-height: 100vh;
-      position: relative;
-    }
-
-    .container {
-      position: relative;
-      width: 100%;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .title {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: #0ef;
-      font-size: 2em;
-      text-shadow: 0 0 10px #0ef, 0 0 20px #0ef;
-      z-index: 10;
-      white-space: nowrap;
-    }
-
-    .container span {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      width: 32px;
-      height: 6px;
-      background: #2c4766;
-      border-radius: 8px;
-      transform-origin: left center;
-      transform: translate(-50%, -50%) rotate(calc(var(--i) * (360deg / 50))) translateX(128px);
-      animation: animateBlink 3s linear infinite;
-      animation-delay: calc(var(--i) * 0.06s);
-    }
-
-    @keyframes animateBlink {
-      0%, 100% {
-        background: #0ef;
-        box-shadow: 0 0 10px #0ef, 0 0 20px #0ef;
-      }
-      25% {
-        background: #2c4766;
-        box-shadow: none;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Loading | Smart Burme</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
+        }
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background: #1f293a;
+            overflow: hidden;
+        }
+        .container {
+            position: relative;
+            width: 100%;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        /* Background animation */
+        .container span {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            width: 32px;
+            height: 6px;
+            background: #2c4766;
+            border-radius: 8px;
+            transform-origin: left center;
+            transform: translate(-50%, -50%) rotate(calc(var(--i) * (360deg / 50))) translateX(128px);
+            animation: animateBlink 3s linear infinite;
+            animation-delay: calc(var(--i) * (0.06s));
+        }
+        @keyframes animateBlink {
+            0%, 100% {
+                background: #0ef;
+                box-shadow: 0 0 10px #0ef, 0 0 20px #0ef;
+            }
+            25% {
+                background: #2c4766;
+                box-shadow: none;
+            }
+        }
+        /* SMART BURME Text Styling */
+        h1 {
+            color: #0ef;
+            font-size: 1.4em; /* Size adjusted */
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 10;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <div class="title">SMART BURME</div>
-  </div>
+    <div class="container">
+        <!-- SMART BURME Text -->
+        <h1>SMART BURME</h1>
 
-  <script>
-    // span animation generate
-    for (let i = 0; i < 50; i++) {
-      const span = document.createElement('span');
-      span.style.setProperty('--i', i);
-      document.querySelector('.container').appendChild(span);
-    }
+        <!-- Background animation spans -->
+        <span style="--i:0"></span>
+        <span style="--i:1"></span>
+        <span style="--i:2"></span>
+        <span style="--i:3"></span>
+        <span style="--i:4"></span>
+        <span style="--i:5"></span>
+        <span style="--i:6"></span>
+        <span style="--i:7"></span>
+        <span style="--i:8"></span>
+        <span style="--i:9"></span>
+        <span style="--i:10"></span>
+        <span style="--i:11"></span>
+        <span style="--i:12"></span>
+        <span style="--i:13"></span>
+        <span style="--i:14"></span>
+        <span style="--i:15"></span>
+        <span style="--i:16"></span>
+        <span style="--i:17"></span>
+        <span style="--i:18"></span>
+        <span style="--i:19"></span>
+        <span style="--i:20"></span>
+        <span style="--i:21"></span>
+        <span style="--i:22"></span>
+        <span style="--i:23"></span>
+        <span style="--i:24"></span>
+        <span style="--i:25"></span>
+        <span style="--i:26"></span>
+        <span style="--i:27"></span>
+        <span style="--i:28"></span>
+        <span style="--i:29"></span>
+        <span style="--i:30"></span>
+        <span style="--i:31"></span>
+        <span style="--i:32"></span>
+        <span style="--i:33"></span>
+        <span style="--i:34"></span>
+        <span style="--i:35"></span>
+        <span style="--i:36"></span>
+        <span style="--i:37"></span>
+        <span style="--i:38"></span>
+        <span style="--i:39"></span>
+        <span style="--i:40"></span>
+        <span style="--i:41"></span>
+        <span style="--i:42"></span>
+        <span style="--i:43"></span>
+        <span style="--i:44"></span>
+        <span style="--i:45"></span>
+        <span style="--i:46"></span>
+        <span style="--i:47"></span>
+        <span style="--i:48"></span>
+        <span style="--i:49"></span>
+    </div>
 
-    // auto redirect after 7 seconds
-    setTimeout(() => {
-      window.location.href = 'registration.html';
-    }, 7000);
-  </script>
+    <script>
+        // Redirect to registration.html after 7 seconds
+        setTimeout(function() {
+            window.location.href = "registration.html";
+        }, 7000);
+    </script>
 </body>
 </html>
