--- a/index.html
+++ b/index.html
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart Burme</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: black;
-      color: white;
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    h1 {
-      font-size: 3rem;
-      letter-spacing: 1rem;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login | Smart Burme</title>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
 </head>
 <body>
-  <h1>S M</h1>
+    <h2>Login</h2>
+    <form id="loginForm">
+        <input type="email" id="email" placeholder="Enter Email" required><br><br>
+        <input type="password" id="password" placeholder="Enter Password" required><br><br>
+        <button type="submit">Login</button>
+    </form>
 
-  <!-- Firebase JS SDK Configuration -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-analytics.js";
+    <script>
+        // Your Firebase config
+        const firebaseConfig = {
+            apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
+            authDomain: "smart-burme-app.firebaseapp.com",
+            projectId: "smart-burme-app",
+            storageBucket: "smart-burme-app.appspot.com",
+            messagingSenderId: "851502425686",
+            appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7",
+            measurementId: "G-EB564CY4KT"
+        };
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
-      authDomain: "smart-burme-app.firebaseapp.com",
-      projectId: "smart-burme-app",
-      storageBucket: "smart-burme-app.firebasestorage.app",
-      messagingSenderId: "851502425686",
-      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7",
-      measurementId: "G-EB564CY4KT"
-    };
+        // Initialize Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
 
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
+        const loginForm = document.getElementById('loginForm');
 
-    // Redirect to registration.html after 7 seconds
-    setTimeout(() => {
-      window.location.href = "registration.html";
-    }, 7000);
-  </script>
+        loginForm.addEventListener('submit', function(event) {
+            event.preventDefault();
+
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+
+            // Sign in with Firebase
+            auth.signInWithEmailAndPassword(email, password)
+                .then(() => {
+                    window.location.href = 'main.html'; // Redirect to main.html after login
+                })
+                .catch((error) => {
+                    alert(error.message); // Show error message if any
+                });
+        });
+    </script>
 </body>
 </html>
