--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!-- Redirect After 3s -->
   <script>
     setTimeout(() => {
-      window.location.href = "registrations.html";
+      window.location.href = "registration.html";
     }, 3000);
   </script>
 </body>
