--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 
   <div id="buttons">
     <a href="login.html" class="btn">Login</a>
-    <a href="signup.html" class="btn">Sign Up</a>
-    <a href="forget-password.html" class="btn">Forgot Password</a>
+    <a href="registration.html" class="btn">Sign Up</a>
+    <a href="forget password.html" class="btn">Forgot Password</a>
   </div>
 
   <script>
