--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   </style>
 </head>
 <body>
-  <div id="loader">Loading Smart Burme App...</div>
+  <div id="loader">Loading...</div>
 
   <div id="main-content">
     <div class="floating-title">Smart Burme</div>
