--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart Burme - Login</title>
+  <title> Login </title>
   <style>
     * {
       margin: 0;
@@ -97,7 +97,7 @@
 </head>
 <body>
 
-  <div class="floating-title">Smart Burme - Login</div>
+  <div class="floating-title"> Login </div>
 
   <div class="form-container">
     <input type="email" id="email" class="input-field" placeholder="Email" required />
